# SCVPI.exercises

Exercise1/: CMakeLists.txt
Exercise2/: CMakeLists.txt  main.cpp  state_machine.cpp  state_machine.h  stimuli.cpp
Exercise3/: CMakeLists.txt  bus.h  main.cpp  memory.h  processor.h
Exercise5/: main.cpp  place.h  subnet.h  transition.h
